# opencv-rust

./: .gitignore  BATCH_1_PLAN.md  Cargo.toml  FINAL_PERFORMANCE_SUMMARY.md  MIGRATION_STATUS.md  OPTIMIZATION_CATALOG.md  PERFORMANCE_REPORT.md  README.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  WASM_THREADING_ISSUE.md  batch_migrate.sh  build-wasm-cpu.sh  build-wasm-gpu.sh  build-wasm.sh  migrate_backend.py  verification_status.json
.cargo/: config.toml
benches/: opencv_benchmarks.rs
cache/: README.md
docs/: 2025-11-12-testing-infrastructure.md  20251112-1315-all-clippy-classes-analysis.md  20251112-1315-clippy.md  20251114-2116-gpu-audit.md  251112-2100-opencv-parity-plan.md  AUDIT_2025_11_11.md  BATCH_1_PROGRESS.md  BENCHMARKING.md  COMPLETION_CRITERIA.md  GPU_BATCH_OPTIMIZATION.md  GPU_IMPLEMENTATION_STATUS.md  GPU_OPERATIONS_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  RECONCILED_PLAN.md  TESTING.md  VERIFICATION_MATRIX.md  WASM_STATUS.md  WASM_TEST_TEMPLATE.rs  casting-issues-explained.md  casting-mitigation-strategies.md  plan.md
examples/: basic_operations.rs  comprehensive_demo.rs  image_processing.rs
pocs/: blur_test.html  border_test.html  cache  check_actual_border.js  check_backend.js  check_border.js  check_cpu_opencv.js  check_implementation.js  check_kernel.js  check_kernel_comparison.js  check_opencv_impl.js  check_opencv_kernel.js  check_rounding_mode.js  check_solid.js  check_trace_border.js  debug_blur_test.js  extract_opencv_impl.html  gpu_batch_benchmark.html  gpu_performance_benchmark.html  hello.html  inspect_opencv_weights.html  kernel_comparison.html  kernel_debug.html  operation_test.html  package-lock.json  package.json  run_batch_benchmark.js  run_blur_test.js  run_gpu_benchmark.js  run_operation_tests.js  run_simple_bench.js  run_verify_test.js  run_wasm_test.js  simple_gpu_bench.html  solid_color_test.html  test.js  test_actual_border.html  test_box_rounding.html  test_cpu_vs_opencv.html  test_cvtcolor.js  (+21 more)
scripts/: fix_shader_byte_access.py  install-hooks.sh  verify_completeness.sh
src/: backend_native_test.rs  backend_native_test.rs.bak  error.rs  lib.rs
src/core/: mat.rs  (+4 more)
tests/: backend_selection_tests.rs  gpu_correctness_tests.rs  test_accuracy_adaptive_threshold.rs  test_accuracy_bilateral.rs  test_accuracy_bilateral.rs.bak  test_accuracy_bilateral.rs.bak2  (+194 more)
(+447 files in other folders)
