[package]
name = "opencv-rust"
version = "0.1.0"
edition = "2021"
authors = ["OpenCV Rust Contributors"]
description = "A pure Rust implementation of OpenCV functionality"
license = "Apache-2.0"
repository = "https://github.com/boxabirds/opencv-rust"
keywords = ["opencv", "computer-vision", "image-processing"]
categories = ["multimedia::images", "computer-vision"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24"
ndarray = "0.15"
num-traits = "0.2"
thiserror = "1.0"
rayon = { version = "1.10", optional = true }
wgpu = { version = "0.19", features = ["wgsl"], optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuBuffer",
    "GpuTexture",
    "ImageData",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console",
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["rayon"]
gpu = ["wgpu", "pollster", "bytemuck", "futures"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "console_error_panic_hook", "gpu"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "opencv_benchmarks"
harness = false
